openshift/04-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: crm-frontend
  labels:
    app: crm
    component: frontend
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: crm-backend
  labels:
    app: crm
    component: backend
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
